--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,24 @@
 # main links links
 main:
+
+
+  - title: "Research"
+    url: /portfolio/
+
+  - title: "CV"
+    url: /cv/
+
   - title: "Publications"
     url: /publications/
 
   - title: "Talks"
     url: /talks/    
 
-  - title: "Teaching"
+  - title: "Open Code"
     url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
         
   - title: "Blog Posts"
     url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
+  - title: "FWI"
     url: /markdown/
