--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,8 +3,8 @@
 Name Name:
   name        : "Haipeng Li"
   uri         : "http://www.imagex.ltd"
-  email       : "name@name.com"
-  bio         : "This is the first name."
+  email       : "haipengl@mail.ustc.edu.cn"
+  bio         : "Haipeng Li"
   avatar      : "bio-photo-2.jpg"
   twitter     : "name"
   google_plus : "Name"
