--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Haipeng Li"
   avatar           : "profile.png"
-  bio              : "Incoming PhD student at Stanford University, exploration seismology"
+  bio              : "I'm an incoming PhD student in exploration seismology, Stanford University"
   location         : "Palo Alto, CA"
   employer         :
   pubmed           :
